add webfont, js and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Etch-A-Sketch</title>
 </head>
@@ -13,7 +13,8 @@
     <div class="container">
         <div class="board">
             <h1>Etch-A-Sketch</h1>
-
+            <div class="drawBoard">
+            </div>
         </div>
     </div>
     
