add major css and html update

--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
             <h1>Etch-A-Sketch</h1>
             <div class="drawBoard">
             </div>
+            <div class="btnContainer">
+                <button class="btn">Color</button>
+                <button class="btn">Rainbow</button>
+                <button class="btn">Erase</button>
+            </div>
+            <div class="decoration">
+                <button class="decBtn"></button>
+                <button class="decBtn"></button>
+            </div>
         </div>
-    </div>
-    
+    </div> 
+
+    <footer>
+        <a href="https://github.com/martinnvillar">martinnvillar</a> 
+        © The Odin Project 2023
+    </footer>
 </body>
 </html>
