--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <div class="container">
         <div class="board">
             <h1>Etch-A-Sketch</h1>
-            <div class="drawBoard">
+            <div class="gridContainer">
+                <div class="grid"></div>
             </div>
             <div class="btnContainer">
                 <button class="btn">Color</button>
                 <button class="btn">Rainbow</button>
-                <button class="btn">Erase</button>
+                <button class="btn">Clear</button>
             </div>
-            <div class="decoration">
+            <div class="quantity">
+                <label for="quantInput">Type A Value For Grid Size:</label>
+                <input type="number" id="quantInput" name="quantity" />
+            </div>
+            <!-- <div class="decoration">
                 <button class="decBtn"></button>
                 <button class="decBtn"></button>
-            </div>
+            </div> -->
         </div>
     </div> 
 
@@ -32,4 +37,4 @@
         © The Odin Project 2023
     </footer>
 </body>
-</html>
+</html>>
